Fix about:tracing overflow issues
BUG=#917

Review URL: https://codereview.appspot.com/222700043

--- a/trace_viewer/extras/about_tracing/common.css
+++ b/trace_viewer/extras/about_tracing/common.css
@@ -16,5 +16,6 @@ body {
 
 body > x-profiling-view {
   -webkit-flex: 1 1 auto;
+  min-height: 0;
 }
 
